Bug 312778 - Undo after a spell check correction doesn't work, undoes previous action, r=brettw, sr=mscott